--- a/frontend_react_vite/package.json
+++ b/frontend_react_vite/package.json
@@ -6,33 +6,69 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.12.2",
     "node-sass": "^8.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@swc/core": "^1.3.53",
+    "@swc/jest": "^0.2.26",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.30.1",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-transform-import-meta": "^2.2.0",
+    "camelcase": "^6.3.0",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.10.3",
+    "identity-obj-proxy": "^3.0.0",
+    "intersection-observer": "^0.12.2",
+    "isomorphic-fetch": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "jsdom": "^21.1.1",
+    "msw": "^1.2.1",
     "prettier": "^2.8.7",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.62.0",
-    "vite": "^4.2.0"
+    "setimmediate": "^1.0.5",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "vite": "^4.3.1",
+    "vitest": "^0.30.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
