--- a/frontend_react_vite/package.json
+++ b/frontend_react_vite/package.json
@@ -58,10 +58,12 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-puppeteer": "^8.0.6",
     "jest-watch-typeahead": "^2.2.2",
     "jsdom": "^21.1.1",
     "msw": "^1.2.1",
     "prettier": "^2.8.7",
+    "puppeteer": "^19.11.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.62.0",
     "setimmediate": "^1.0.5",
