--- a/frontend_react_vite/package.json
+++ b/frontend_react_vite/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@babel/runtime": "^7.21.0",
     "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "email-js": "^2.0.2",
@@ -27,7 +29,8 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "react-tooltip": "^4.5.1"
+    "react-tooltip": "^4.5.1",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
