--- a/frontend_react_vite/package.json
+++ b/frontend_react_vite/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run test && vite build",
     "preview": "vite preview",
     "test": "jest"
   },
@@ -46,6 +46,7 @@
     "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.30.1",
     "babel-jest": "^29.5.0",
@@ -78,6 +79,7 @@
     "react-test-renderer": "^18.2.0",
     "sass": "^1.62.0",
     "setimmediate": "^1.0.5",
+    "terser": "^5.17.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "vite": "^4.3.1",
