--- a/frontend_react_vite/package.json
+++ b/frontend_react_vite/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@researchgate/react-intersection-observer": "^1.3.5",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "email-js": "^2.0.2",
